# zte-cfgs

./: .gitignore  LICENSE  README.md  local-install.sh  pyproject.toml
.github/workflows/: ci.yml  publish.yml
cfgs/: db_default_Henan_cfg.xml
docs/: development.md  format.md  keys.md  workflow.md
scripts/: device_collect.sh  device_print_indivkey.sh
src/zte_cfg_tools/: __init__.py  cli.py  keys.py
src/zte_cfgs/: __init__.py  cli.py  e8.py  format.py  keys.py
src/zte_cfgs/device_scripts/: __init__.py  device_collect.sh  device_print_indivkey.sh
tests/: test_cli.py  test_e8.py  test_format.py  test_keys.py
