[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "zte-cfg-tools"
version = "0.1.1"
description = "Offline unpacking, encryption and repacking tools for ZTE ONU configuration files"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "zte-cfg-tools contributors"}]
dependencies = ["pycryptodome>=3.20"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
]

[project.optional-dependencies]
test = ["pytest>=8", "build>=1.2"]

[project.scripts]
zte-cfg = "zte_cfg_tools.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/zte_cfg_tools"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
